force-app/main/default/objects/Forecast_Metric_Filter__c/Forecast_Metric_Filter__c.object-meta.xml
<CustomObject>
    <label>Forecast Metric Filter</label>
    <pluralLabel>Forecast Metric Filters</pluralLabel>
    <nameField>
        <label>Filter Number</label>
        <type>AutoNumber</type>
        <displayFormat>FMF-{0000}</displayFormat>
        <startingNumber>1</startingNumber>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description
  >Structured filter clause for a Forecast_Metric__c. Replaces freeform Source_Filter__c text. Each clause has Field/Operator/Value/Logical_Operator. Max 5 clauses per metric (enforced by trigger). StructuredFilterBuilder.cls converts these records to safe parameterized SOQL.</description>
</CustomObject>