force-app/main/default/objects/Forecast_Metric_Filter__c/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <label>Field API Name</label>
    <description
  >API name of the field on the parent metric's Source_Object__c to filter by. Validated against Schema.describe at save time.</description>
    <type>Text</type>
    <length>100</length>
    <required>true</required>
</CustomField>