force-app/main/default/objects/Forecast_Metric_Filter__c/fields/Forecast_Metric__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Metric__c</fullName>
    <label>Forecast Metric</label>
    <description>Parent metric this filter clause applies to.</description>
    <referenceTo>Forecast_Metric__c</referenceTo>
    <relationshipName>Forecast_Metric_Filters</relationshipName>
    <relationshipLabel>Forecast Metric Filters</relationshipLabel>
    <type>Lookup</type>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>