force-app/main/default/objects/Forecast_Metric_Filter__c/fields/Logical_Operator__c.field-meta.xml
<CustomField>
    <fullName>Logical_Operator__c</fullName>
    <label>Logical Operator</label>
    <description
  >How this clause joins to the next. Last clause's value is ignored.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>AND</fullName><default>true</default><label
        >AND</label></value>
            <value><fullName>OR</fullName><default>false</default><label
        >OR</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>