force-app/main/default/objects/Forecast_Metric_Filter__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <label>Operator</label>
    <description>Comparison operator for this filter clause.</description>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>EQUALS</fullName><default>true</default><label
        >=</label></value>
            <value><fullName>NOT_EQUALS</fullName><default>false</default><label
        >!=</label></value>
            <value><fullName>GREATER_THAN</fullName><default
        >false</default><label>&gt;</label></value>
            <value><fullName>LESS_THAN</fullName><default>false</default><label
        >&lt;</label></value>
            <value><fullName>GREATER_OR_EQUAL</fullName><default
        >false</default><label>&gt;=</label></value>
            <value><fullName>LESS_OR_EQUAL</fullName><default
        >false</default><label>&lt;=</label></value>
            <value><fullName>IN</fullName><default>false</default><label
        >IN</label></value>
            <value><fullName>NOT_IN</fullName><default>false</default><label
        >NOT IN</label></value>
            <value><fullName>LIKE</fullName><default>false</default><label
        >LIKE</label></value>
            <value><fullName>NOT_LIKE</fullName><default>false</default><label
        >NOT LIKE</label></value>
            <value><fullName>INCLUDES</fullName><default>false</default><label
        >INCLUDES (multi-picklist)</label></value>
            <value><fullName>EXCLUDES</fullName><default>false</default><label
        >EXCLUDES (multi-picklist)</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>