force-app/main/default/objects/Forecast_Metric_Filter__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <label>Sort Order</label>
    <description>Clause evaluation order within the metric.</description>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
    <required>true</required>
    <defaultValue>1</defaultValue>
</CustomField>