force-app/main/default/objects/Forecast_Metric_Filter__c/fields/Validation_Message__c.field-meta.xml
<CustomField>
    <fullName>Validation_Message__c</fullName>
    <label>Validation Message</label>
    <description
  >Human-readable status detail from the validator batch.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>