force-app/main/default/objects/Forecast_Metric_Filter__c/fields/Validation_Status__c.field-meta.xml
<CustomField>
    <fullName>Validation_Status__c</fullName>
    <label>Validation Status</label>
    <description
  >Set by daily ForecastMetricFilterValidator batch. Indicates whether the field still exists and (for picklist operators) whether the value still exists in the current picklist.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Valid</fullName><default>true</default><label
        >Valid</label></value>
            <value><fullName>Invalid_Field</fullName><default
        >false</default><label>Invalid Field</label></value>
            <value><fullName>Invalid_Value</fullName><default
        >false</default><label>Invalid Value</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>